card flip works!

--- a/index.html
+++ b/index.html
@@ -19,24 +19,26 @@
   </header>
   <body>
     <main>
-      <div class="card-container">
-        <div class="card one">
-          <img
-            src="assets/card-back.svg"
-            height="130px"
-            width="100px"
-            alt="back of card"
-            id="front"
-          />
-        </div>
-        <div class="card one">
-          <img
-            src="assets/card-plant1.svg"
-            height="130px"
-            width="100px"
-            alt="front of card"
-            id="back"
-          />
+      <div class="maincontainer">
+        <div class="card" id="card">
+          <div class="front">
+            <img
+              src="assets/card-plant1.svg"
+              height="130px"
+              width="100px"
+              alt="front of card"
+              id="front"
+            />
+          </div>
+          <div class="back">
+            <img
+              src="assets/card-back.svg"
+              height="130px"
+              width="100px"
+              alt="back of card"
+              id="back"
+            />
+          </div>
         </div>
       </div>
     </main>
