--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="card" id="card">
           <div class="front">
             <img
-              src="assets/card-plant1.svg"
+              src="assets/card-back.svg"
               height="130px"
               width="100px"
               alt="front of card"
@@ -32,7 +32,227 @@
           </div>
           <div class="back">
             <img
+              src="assets/card-plant1.svg"
+              height="130px"
+              width="100px"
+              alt="back of card"
+              id="back"
+            />
+          </div>
+        </div>
+        <div class="card" id="card">
+          <div class="front">
+            <img
               src="assets/card-back.svg"
+              height="130px"
+              width="100px"
+              alt="front of card"
+              id="front"
+            />
+          </div>
+          <div class="back">
+            <img
+              src="assets/card-plant1.svg"
+              height="130px"
+              width="100px"
+              alt="back of card"
+              id="back"
+            />
+          </div>
+        </div>
+        <div class="card" id="card">
+          <div class="front">
+            <img
+              src="assets/card-back.svg"
+              height="130px"
+              width="100px"
+              alt="front of card"
+              id="front"
+            />
+          </div>
+          <div class="back">
+            <img
+              src="assets/card-plant1.svg"
+              height="130px"
+              width="100px"
+              alt="back of card"
+              id="back"
+            />
+          </div>
+        </div>
+        <div class="card" id="card">
+          <div class="front">
+            <img
+              src="assets/card-back.svg"
+              height="130px"
+              width="100px"
+              alt="front of card"
+              id="front"
+            />
+          </div>
+          <div class="back">
+            <img
+              src="assets/card-plant1.svg"
+              height="130px"
+              width="100px"
+              alt="back of card"
+              id="back"
+            />
+          </div>
+        </div>
+        <div class="card" id="card">
+          <div class="front">
+            <img
+              src="assets/card-back.svg"
+              height="130px"
+              width="100px"
+              alt="front of card"
+              id="front"
+            />
+          </div>
+          <div class="back">
+            <img
+              src="assets/card-plant1.svg"
+              height="130px"
+              width="100px"
+              alt="back of card"
+              id="back"
+            />
+          </div>
+        </div>
+        <div class="card" id="card">
+          <div class="front">
+            <img
+              src="assets/card-back.svg"
+              height="130px"
+              width="100px"
+              alt="front of card"
+              id="front"
+            />
+          </div>
+          <div class="back">
+            <img
+              src="assets/card-plant1.svg"
+              height="130px"
+              width="100px"
+              alt="back of card"
+              id="back"
+            />
+          </div>
+        </div>
+        <div class="card" id="card">
+          <div class="front">
+            <img
+              src="assets/card-back.svg"
+              height="130px"
+              width="100px"
+              alt="front of card"
+              id="front"
+            />
+          </div>
+          <div class="back">
+            <img
+              src="assets/card-plant1.svg"
+              height="130px"
+              width="100px"
+              alt="back of card"
+              id="back"
+            />
+          </div>
+        </div>
+        <div class="card" id="card">
+          <div class="front">
+            <img
+              src="assets/card-back.svg"
+              height="130px"
+              width="100px"
+              alt="front of card"
+              id="front"
+            />
+          </div>
+          <div class="back">
+            <img
+              src="assets/card-plant1.svg"
+              height="130px"
+              width="100px"
+              alt="back of card"
+              id="back"
+            />
+          </div>
+        </div>
+        <div class="card" id="card">
+          <div class="front">
+            <img
+              src="assets/card-back.svg"
+              height="130px"
+              width="100px"
+              alt="front of card"
+              id="front"
+            />
+          </div>
+          <div class="back">
+            <img
+              src="assets/card-plant1.svg"
+              height="130px"
+              width="100px"
+              alt="back of card"
+              id="back"
+            />
+          </div>
+        </div>
+        <div class="card" id="card">
+          <div class="front">
+            <img
+              src="assets/card-back.svg"
+              height="130px"
+              width="100px"
+              alt="front of card"
+              id="front"
+            />
+          </div>
+          <div class="back">
+            <img
+              src="assets/card-plant1.svg"
+              height="130px"
+              width="100px"
+              alt="back of card"
+              id="back"
+            />
+          </div>
+        </div>
+        <div class="card" id="card">
+          <div class="front">
+            <img
+              src="assets/card-back.svg"
+              height="130px"
+              width="100px"
+              alt="front of card"
+              id="front"
+            />
+          </div>
+          <div class="back">
+            <img
+              src="assets/card-plant1.svg"
+              height="130px"
+              width="100px"
+              alt="back of card"
+              id="back"
+            />
+          </div>
+        </div>
+        <div class="card" id="card">
+          <div class="front">
+            <img
+              src="assets/card-back.svg"
+              height="130px"
+              width="100px"
+              alt="front of card"
+              id="front"
+            />
+          </div>
+          <div class="back">
+            <img
+              src="assets/card-plant1.svg"
               height="130px"
               width="100px"
               alt="back of card"
