card layout mobile

--- a/index.html
+++ b/index.html
@@ -13,258 +13,114 @@
     />
     <title>Plant Memory Game</title>
   </head>
-  <header>
-    <h1>Plant-emonium</h1>
-    <p>A Plant Memory Game</p>
-  </header>
   <body>
+    <header>
+      <h1>Plant-emonium</h1>
+      <p>A Plant Memory Game</p>
+    </header>
     <main>
       <div class="maincontainer">
         <div class="card" id="card">
           <div class="front">
-            <img
-              src="assets/card-back.svg"
-              height="130px"
-              width="100px"
-              alt="front of card"
-              id="front"
-            />
+            <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img
-              src="assets/card-plant1.svg"
-              height="130px"
-              width="100px"
-              alt="back of card"
-              id="back"
-            />
+            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
           <div class="front">
-            <img
-              src="assets/card-back.svg"
-              height="130px"
-              width="100px"
-              alt="front of card"
-              id="front"
-            />
+            <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img
-              src="assets/card-plant1.svg"
-              height="130px"
-              width="100px"
-              alt="back of card"
-              id="back"
-            />
+            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
           <div class="front">
-            <img
-              src="assets/card-back.svg"
-              height="130px"
-              width="100px"
-              alt="front of card"
-              id="front"
-            />
+            <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img
-              src="assets/card-plant1.svg"
-              height="130px"
-              width="100px"
-              alt="back of card"
-              id="back"
-            />
+            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
           <div class="front">
-            <img
-              src="assets/card-back.svg"
-              height="130px"
-              width="100px"
-              alt="front of card"
-              id="front"
-            />
+            <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img
-              src="assets/card-plant1.svg"
-              height="130px"
-              width="100px"
-              alt="back of card"
-              id="back"
-            />
+            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
           <div class="front">
-            <img
-              src="assets/card-back.svg"
-              height="130px"
-              width="100px"
-              alt="front of card"
-              id="front"
-            />
+            <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img
-              src="assets/card-plant1.svg"
-              height="130px"
-              width="100px"
-              alt="back of card"
-              id="back"
-            />
+            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
           <div class="front">
-            <img
-              src="assets/card-back.svg"
-              height="130px"
-              width="100px"
-              alt="front of card"
-              id="front"
-            />
+            <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img
-              src="assets/card-plant1.svg"
-              height="130px"
-              width="100px"
-              alt="back of card"
-              id="back"
-            />
+            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
           <div class="front">
-            <img
-              src="assets/card-back.svg"
-              height="130px"
-              width="100px"
-              alt="front of card"
-              id="front"
-            />
+            <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img
-              src="assets/card-plant1.svg"
-              height="130px"
-              width="100px"
-              alt="back of card"
-              id="back"
-            />
+            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
           <div class="front">
-            <img
-              src="assets/card-back.svg"
-              height="130px"
-              width="100px"
-              alt="front of card"
-              id="front"
-            />
+            <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img
-              src="assets/card-plant1.svg"
-              height="130px"
-              width="100px"
-              alt="back of card"
-              id="back"
-            />
+            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
           <div class="front">
-            <img
-              src="assets/card-back.svg"
-              height="130px"
-              width="100px"
-              alt="front of card"
-              id="front"
-            />
+            <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img
-              src="assets/card-plant1.svg"
-              height="130px"
-              width="100px"
-              alt="back of card"
-              id="back"
-            />
+            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
           <div class="front">
-            <img
-              src="assets/card-back.svg"
-              height="130px"
-              width="100px"
-              alt="front of card"
-              id="front"
-            />
+            <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img
-              src="assets/card-plant1.svg"
-              height="130px"
-              width="100px"
-              alt="back of card"
-              id="back"
-            />
+            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
           <div class="front">
-            <img
-              src="assets/card-back.svg"
-              height="130px"
-              width="100px"
-              alt="front of card"
-              id="front"
-            />
+            <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img
-              src="assets/card-plant1.svg"
-              height="130px"
-              width="100px"
-              alt="back of card"
-              id="back"
-            />
+            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
           <div class="front">
-            <img
-              src="assets/card-back.svg"
-              height="130px"
-              width="100px"
-              alt="front of card"
-              id="front"
-            />
+            <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img
-              src="assets/card-plant1.svg"
-              height="130px"
-              width="100px"
-              alt="back of card"
-              id="back"
-            />
+            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
           </div>
         </div>
       </div>
     </main>
     <footer>
       <div class="timer"></div>
-      <div>
+      <div class="button-container">
         <button>Reset</button>
       </div>
     </footer>
