--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
       </div>
     </main>
     <footer>
-      <div class="timer"></div>
+      <button class="start">Start</button>
       <div class="button-container">
-        <button>Reset</button>
+        <button class="reset">Reset</button>
       </div>
     </footer>
     <script src="script.js"></script>
