fixed card sizing

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
+            <img
+              src="assets/card-pothos (1).svg"
+              alt="back of card"
+              id="back"
+            />
           </div>
         </div>
         <div class="card" id="card">
@@ -33,7 +37,11 @@
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
+            <img
+              src="assets/card-pothos (1).svg"
+              alt="back of card"
+              id="back"
+            />
           </div>
         </div>
         <div class="card" id="card">
@@ -41,7 +49,7 @@
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
+            <img src="assets/begonia.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
@@ -49,7 +57,7 @@
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
+            <img src="assets/begonia.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
@@ -57,7 +65,7 @@
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
+            <img src="assets/card-monstera.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
@@ -65,7 +73,7 @@
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
+            <img src="assets/card-monstera.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
@@ -73,7 +81,7 @@
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
+            <img src="assets/card-money.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
@@ -81,7 +89,7 @@
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
+            <img src="assets/card-money.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
@@ -89,7 +97,7 @@
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
+            <img src="assets/card-mystery.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
@@ -97,7 +105,7 @@
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
+            <img src="assets/card-mystery.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
@@ -105,7 +113,7 @@
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
+            <img src="assets/card-snake.svg" alt="back of card" id="back" />
           </div>
         </div>
         <div class="card" id="card">
@@ -113,7 +121,7 @@
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-plant1.svg" alt="back of card" id="back" />
+            <img src="assets/card-snake.svg" alt="back of card" id="back" />
           </div>
         </div>
       </div>
