updated id names

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <img
               src="assets/card-pothos (1).svg"
               alt="back of card"
-              id="back"
+              id="pothos"
             />
           </div>
         </div>
@@ -40,88 +40,104 @@
             <img
               src="assets/card-pothos (1).svg"
               alt="back of card"
-              id="back"
+              id="pothos"
             />
           </div>
         </div>
-        <div class="card" id="card">
+        <div class="card" id="begonia">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/begonia.svg" alt="back of card" id="back" />
+            <img src="assets/begonia.svg" alt="back of card" id="begonia" />
           </div>
         </div>
-        <div class="card" id="card">
+        <div class="card" id="begonia">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/begonia.svg" alt="back of card" id="back" />
+            <img src="assets/begonia.svg" alt="back of card" id="begonia" />
           </div>
         </div>
-        <div class="card" id="card">
+        <div class="card" id="monstera">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-monstera.svg" alt="back of card" id="back" />
+            <img
+              src="assets/card-monstera.svg"
+              alt="back of card"
+              id="monstera"
+            />
           </div>
         </div>
-        <div class="card" id="card">
+        <div class="card" id="monstera">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-monstera.svg" alt="back of card" id="back" />
+            <img
+              src="assets/card-monstera.svg"
+              alt="back of card"
+              id="monstera"
+            />
           </div>
         </div>
-        <div class="card" id="card">
+        <div class="card" id="money">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-money.svg" alt="back of card" id="back" />
+            <img src="assets/card-money.svg" alt="back of card" id="money" />
           </div>
         </div>
-        <div class="card" id="card">
+        <div class="card" id="money">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-money.svg" alt="back of card" id="back" />
+            <img src="assets/card-money.svg" alt="back of card" id="money" />
           </div>
         </div>
-        <div class="card" id="card">
+        <div class="card" id="mystery">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-mystery.svg" alt="back of card" id="back" />
+            <img
+              src="assets/card-mystery.svg"
+              alt="back of card"
+              id="mystery"
+            />
           </div>
         </div>
-        <div class="card" id="card">
+        <div class="card" id="mystery">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-mystery.svg" alt="back of card" id="back" />
+            <img
+              src="assets/card-mystery.svg"
+              alt="back of card"
+              id="mystery"
+            />
           </div>
         </div>
-        <div class="card" id="card">
+        <div class="card" id="snake">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-snake.svg" alt="back of card" id="back" />
+            <img src="assets/card-snake.svg" alt="back of card" id="snake" />
           </div>
         </div>
-        <div class="card" id="card">
+        <div class="card" id="snake">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
           <div class="back">
-            <img src="assets/card-snake.svg" alt="back of card" id="back" />
+            <img src="assets/card-snake.svg" alt="back of card" id="snake" />
           </div>
         </div>
       </div>
