--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
       <div class="maincontainer">
-        <div class="card" id="card">
+        <div class="card" data-plant="pothos">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
@@ -32,7 +32,7 @@
             />
           </div>
         </div>
-        <div class="card" id="card">
+        <div class="card" data-plant="pothos">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
@@ -44,7 +44,7 @@
             />
           </div>
         </div>
-        <div class="card" id="begonia">
+        <div class="card" data-plant="begonia">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
@@ -52,7 +52,7 @@
             <img src="assets/begonia.svg" alt="back of card" id="begonia" />
           </div>
         </div>
-        <div class="card" id="begonia">
+        <div class="card" data-plant="begonia">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
@@ -60,7 +60,7 @@
             <img src="assets/begonia.svg" alt="back of card" id="begonia" />
           </div>
         </div>
-        <div class="card" id="monstera">
+        <div class="card" data-plant="monstera">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
@@ -72,7 +72,7 @@
             />
           </div>
         </div>
-        <div class="card" id="monstera">
+        <div class="card" data-plant="monstera">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
@@ -84,7 +84,7 @@
             />
           </div>
         </div>
-        <div class="card" id="money">
+        <div class="card" data-plant="money">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
@@ -92,7 +92,7 @@
             <img src="assets/card-money.svg" alt="back of card" id="money" />
           </div>
         </div>
-        <div class="card" id="money">
+        <div class="card" data-plant="money">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
@@ -100,7 +100,7 @@
             <img src="assets/card-money.svg" alt="back of card" id="money" />
           </div>
         </div>
-        <div class="card" id="mystery">
+        <div class="card" data-plant="mystery">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
@@ -112,7 +112,7 @@
             />
           </div>
         </div>
-        <div class="card" id="mystery">
+        <div class="card" data-plant="mystery">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
@@ -124,7 +124,7 @@
             />
           </div>
         </div>
-        <div class="card" id="snake">
+        <div class="card" data-plant="snake">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
@@ -132,7 +132,7 @@
             <img src="assets/card-snake.svg" alt="back of card" id="snake" />
           </div>
         </div>
-        <div class="card" id="snake">
+        <div class="card" data-plant="snake">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" id="front" />
           </div>
