push to empty array

--- a/index.html
+++ b/index.html
@@ -22,122 +22,98 @@
       <div class="maincontainer">
         <div class="card" data-plant="pothos">
           <div class="front">
-            <img src="assets/card-back.svg" alt="front of card" id="front" />
+            <img src="assets/card-back.svg" alt="front of card" />
           </div>
           <div class="back">
-            <img
-              src="assets/card-pothos (1).svg"
-              alt="back of card"
-              id="pothos"
-            />
+            <img src="assets/card-pothos (1).svg" alt="back of card" />
           </div>
         </div>
         <div class="card" data-plant="pothos">
           <div class="front">
-            <img src="assets/card-back.svg" alt="front of card" id="front" />
+            <img src="assets/card-back.svg" alt="front of card" />
           </div>
           <div class="back">
-            <img
-              src="assets/card-pothos (1).svg"
-              alt="back of card"
-              id="pothos"
-            />
+            <img src="assets/card-pothos (1).svg" alt="back of card" />
           </div>
         </div>
         <div class="card" data-plant="begonia">
           <div class="front">
-            <img src="assets/card-back.svg" alt="front of card" id="front" />
+            <img src="assets/card-back.svg" alt="front of card" />
           </div>
           <div class="back">
-            <img src="assets/begonia.svg" alt="back of card" id="begonia" />
+            <img src="assets/begonia.svg" alt="back of card" />
           </div>
         </div>
         <div class="card" data-plant="begonia">
           <div class="front">
-            <img src="assets/card-back.svg" alt="front of card" id="front" />
+            <img src="assets/card-back.svg" alt="front of card" />
           </div>
           <div class="back">
-            <img src="assets/begonia.svg" alt="back of card" id="begonia" />
+            <img src="assets/begonia.svg" alt="back of card" />
           </div>
         </div>
         <div class="card" data-plant="monstera">
           <div class="front">
-            <img src="assets/card-back.svg" alt="front of card" id="front" />
+            <img src="assets/card-back.svg" alt="front of card" />
           </div>
           <div class="back">
-            <img
-              src="assets/card-monstera.svg"
-              alt="back of card"
-              id="monstera"
-            />
+            <img src="assets/card-monstera.svg" alt="back of card" />
           </div>
         </div>
         <div class="card" data-plant="monstera">
           <div class="front">
-            <img src="assets/card-back.svg" alt="front of card" id="front" />
+            <img src="assets/card-back.svg" alt="front of card" />
           </div>
           <div class="back">
-            <img
-              src="assets/card-monstera.svg"
-              alt="back of card"
-              id="monstera"
-            />
+            <img src="assets/card-monstera.svg" alt="back of card" />
           </div>
         </div>
         <div class="card" data-plant="money">
           <div class="front">
-            <img src="assets/card-back.svg" alt="front of card" id="front" />
+            <img src="assets/card-back.svg" alt="front of card" />
           </div>
           <div class="back">
-            <img src="assets/card-money.svg" alt="back of card" id="money" />
+            <img src="assets/card-money.svg" alt="back of card" />
           </div>
         </div>
         <div class="card" data-plant="money">
           <div class="front">
-            <img src="assets/card-back.svg" alt="front of card" id="front" />
+            <img src="assets/card-back.svg" alt="front of card" />
           </div>
           <div class="back">
-            <img src="assets/card-money.svg" alt="back of card" id="money" />
+            <img src="assets/card-money.svg" alt="back of card" />
           </div>
         </div>
         <div class="card" data-plant="mystery">
           <div class="front">
-            <img src="assets/card-back.svg" alt="front of card" id="front" />
+            <img src="assets/card-back.svg" alt="front of card" />
           </div>
           <div class="back">
-            <img
-              src="assets/card-mystery.svg"
-              alt="back of card"
-              id="mystery"
-            />
+            <img src="assets/card-mystery.svg" alt="back of card" />
           </div>
         </div>
         <div class="card" data-plant="mystery">
           <div class="front">
-            <img src="assets/card-back.svg" alt="front of card" id="front" />
+            <img src="assets/card-back.svg" alt="front of card" />
           </div>
           <div class="back">
-            <img
-              src="assets/card-mystery.svg"
-              alt="back of card"
-              id="mystery"
-            />
+            <img src="assets/card-mystery.svg" alt="back of card" />
           </div>
         </div>
         <div class="card" data-plant="snake">
           <div class="front">
-            <img src="assets/card-back.svg" alt="front of card" id="front" />
+            <img src="assets/card-back.svg" alt="front of card" />
           </div>
           <div class="back">
-            <img src="assets/card-snake.svg" alt="back of card" id="snake" />
+            <img src="assets/card-snake.svg" alt="back of card" />
           </div>
         </div>
         <div class="card" data-plant="snake">
           <div class="front">
-            <img src="assets/card-back.svg" alt="front of card" id="front" />
+            <img src="assets/card-back.svg" alt="front of card" />
           </div>
           <div class="back">
-            <img src="assets/card-snake.svg" alt="back of card" id="snake" />
+            <img src="assets/card-snake.svg" alt="back of card" />
           </div>
         </div>
       </div>
