count up shuffle etc

--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
         </div>
       </div>
       <!-- modal code -->
+      <!-- <div class="win-modal">
+        <p class="win-statement"></p>
+      </div> -->
       <div class="modal">
         <section class="modal-content">
           <!-- to close modal -->
