stop timer, styling

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <h1>Plant-emonium</h1>
-      <p>A Plant Memory Game</p>
+      <p>a plant memory game</p>
     </header>
     <main>
       <audio controls autoplay loop>
@@ -36,7 +36,7 @@
             <img src="assets/card-back.svg" alt="front of card" />
           </div>
           <div class="back">
-            <img src="assets/card-pothos (1).svg" alt="back of card" />
+            <img src="assets/card-pothos.svg" alt="back of card" />
           </div>
         </div>
         <div class="card" data-plant="pothos">
@@ -44,7 +44,7 @@
             <img src="assets/card-back.svg" alt="front of card" />
           </div>
           <div class="back">
-            <img src="assets/card-pothos (1).svg" alt="back of card" />
+            <img src="assets/card-pothos.svg" alt="back of card" />
           </div>
         </div>
         <div class="card" data-plant="begonia">
@@ -52,7 +52,7 @@
             <img src="assets/card-back.svg" alt="front of card" />
           </div>
           <div class="back">
-            <img src="assets/begonia.svg" alt="back of card" />
+            <img src="assets/card-begonia.svg" alt="back of card" />
           </div>
         </div>
         <div class="card" data-plant="begonia">
@@ -60,7 +60,7 @@
             <img src="assets/card-back.svg" alt="front of card" />
           </div>
           <div class="back">
-            <img src="assets/begonia.svg" alt="back of card" />
+            <img src="assets/card-begonia.svg" alt="back of card" />
           </div>
         </div>
         <div class="card" data-plant="monstera">
@@ -129,9 +129,9 @@
         </div>
       </div>
       <!-- modal code -->
-      <!-- <div class="win-modal">
+      <div class="win-modal">
         <p class="win-statement"></p>
-      </div> -->
+      </div>
       <div class="modal">
         <section class="modal-content">
           <!-- to close modal -->
