--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         />
       </audio>
       <div class="maincontainer">
+        <div class="win-modal">
+          <span class="win-close">&times;</span>
+          <p class="win-statement"></p>
+        </div>
+
         <div class="card" data-plant="pothos">
           <div class="front">
             <img src="assets/card-back.svg" alt="front of card" />
@@ -129,9 +134,7 @@
         </div>
       </div>
       <!-- modal code -->
-      <div class="win-modal">
-        <p class="win-statement"></p>
-      </div>
+
       <div class="modal">
         <section class="modal-content">
           <!-- to close modal -->
